# target-postgres

./: .gitignore  LICENSE.md  README.md  pyproject.toml
target_postgres/: __init__.py  __main__.py  json.py  perftimer.py  sinks.py  target.py
target_postgres/tests/: test_core.py
tests/: test_core.py
