[tool.poetry]
name = "target-postgres"
version = "0.0.1"
description = "`target-postgres` is a Singer target for postgres, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Dan Norman"]
keywords = [
    "ELT",
    "postgres",
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
singer-sdk = { version="~=0.32.0" }
fs-s3fs = { version = "^1.1.1", optional = true }
sqlalchemy = "<3"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.32.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["target_postgres"]
target-version = "py37"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["target_postgres"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-postgres = 'target_postgres.target:Targetpostgres.cli'
