[project]
name = "target-postgres"
version = "0.1.0"
description = "`target-postgres` is a Singer target for postgres, built with the Meltano Singer SDK."
authors = [{ name = "Dan Norman" }]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
keywords = [
    "ELT",
    "postgres",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "singer-sdk~=0.39.0",
    "psycopg2>=2.9.9,<3",
    "psycopg[binary]>=3.2.1,<4",
    "msgspec>=0.18.6,<0.19",
]

[project.optional-dependencies]
s3 = ["fs-s3fs>=1.1.1,<2"]

[project.scripts]
target-postgres = "target_postgres.target:Targetpostgres.cli"

[dependency-groups]
dev = [
    "pytest>=8",
    "singer-sdk[testing]~=0.39.0",
]

[build-system]
requires = ["hatchling>=1,<2"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
plugins = "sqlmypy"

[tool.ruff]
src = ["target_postgres"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["target_postgres"]

[tool.ruff.lint.pydocstyle]
convention = "google"
